cmake_minimum_required(VERSION 3.0.0)
project(Patterns)

# libraries
add_subdirectory(SimUDuck)
add_subdirectory(WeatherData)
add_subdirectory(Button)
add_subdirectory(Observer)
add_subdirectory(Decorator)
add_subdirectory(PizzaStore)
add_subdirectory(Singleton)
add_subdirectory(Command)
add_subdirectory(TemplateMethod)
add_subdirectory(MVC)